apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: network-services
  labels:
    app.kubernetes.io/name: syncthing
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - name: http
      port: 8384
      targetPort: access-http
      protocol: TCP
    - name: sync-tcp
      port: 22000
      targetPort: sync-tcp
      protocol: TCP
    - name: sync-quic
      port: 22000
      targetPort: sync-quic
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: discovery
      protocol: UDP
