apps/syncthing/route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: syncthing-lan-only
  namespace: network-services
spec:
  ipAllowList:
    sourceRange:
      - 192.168.1.0/24
      - 10.8.0.0/24
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
  namespace: network-services
spec:
  parentRefs:
    - name: home
      namespace: traefik
  hostnames:
    - syncthing.reza.network
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: syncthing-lan-only
      backendRefs:
        - name: syncthing
          port: 8384
